--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
   <!-- custom script-->
   <script src="assets/js/circle-progress.min.js"></script>
   <script src="assets/js/TweenMax.min.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
+
 
   <script src="assets/js/contact_us.js"></script>
   <script src="assets/js/script.js"></script>
